macro section content

--- a/macro.html
+++ b/macro.html
@@ -49,23 +49,25 @@
 					<div class="container">
 						<header class="major">
 							<h2>Macroevolution</h2>
-							<p>Ipsum dolor feugiat aliquam tempus sed magna lorem consequat accumsan</p>
+							<p>Investigating the evolutionary successes of life on our planet</p>
 						</header>
 						<div class="row gtr-150">
 							<div class="col-8 col-12-medium">
 
 								<!-- Content -->
 									<section id="content">
-										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+
 										<h3>The Evolution of Marine Fishes</h3>
-										<p>Aliquam massa urna, imperdiet sit amet mi non, bibendum euismod est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam quam, mollis at magna consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam.</p>
-										<p>Vestibulum diam quam, mollis at consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum. Morbi mattis elementum orci, nec dictum porta cursus justo. Quisque ultricies lorem in ligula condimentum, et egestas turpis sagittis. Cras ac nunc urna. Nullam eget lobortis purus. Phasellus vitae tortor non est placerat tristique.</p>
+										<span class="image fit"><img src="images/macro/macrofish.jpg" alt="A mudskipper jumping in its burrow" /></span>
+										<p>Venture a few feet into the ocean and you may well be somewhere no person has ever been. We know very little about our planet's oceans. However, about 1 out of every 4 vertebrate species alive today calls the ocean its home. How tihs diversity evolved and thrived against the backdrop of major climate and geologic change over hundreds of millions of years is a major research focus of our group</p>
+										<p>Many of our projects involve the use of phylogenetic comparative methods, in which we leverage a knowledge of how species are related and when they diverged, with large sequence, ecological, and/or morphological datasets. We recently collaborated with members of Dr. Tom Near's lab group and numerous other collaborators on a project assessing the impact of the K-Pg mass extinction event (remember that giant meteor that contributed to dinosaur declines and caused massive worldwide forest fires?) on marine biodiversity. Rather than recover in the evolutionary blink of an eye, the present day diversity of marine fish diversified over a polonged period long after the K-Pg event. In fact, it took such a long time you could say that the Cenozoic was the 2nd age of fishes. <a href="https://www.biorxiv.org/content/10.1101/2021.07.12.452083v1">You can check out the preprint here </a></p>
+										<p> In addition to working with others on large macroevolutionary projects, our lab prioritizes work in two marine ecosystems: tropical coral reefs and the Southern Ocean of Antarctica </p>
 										<h3>Life in the Antarctic</h3>
 										<p> Unlike other marine environments, over 90% of the fish biomass of the Southern Ocean derives from a single clade: notothenioids. This clade represents a primary link between lower level and higher level consumers such as whales, seals, and penguins in the Antarctic food web, and one of the only examples of adaptive radiation in marine fishes.</p><p> The success of notothenioids has been attributed to their ability to thrive in subzero waters through the use of anti-freeze proteins. While long heralded as a stunning example of a key innovation that drives lineage diversification, our work on these fishes has demonstrated this to be far from the full story.</p> Instead, the diversification of notothenioids appears to have been highly influenced by more geologically recent warming events. As portions of the Southern Ocean are among the most rapidly warming regions on the planet, our work strives to provide explicit linkages between changes in ice movement and the evolutionary dynamics that underlie the generation of nototheniod biodiversity. </p>
-										<span class="image fit"><img src="images/macro1.jpg" height="300" alt="" /></span>
+										<span class="image fit"><img src="images/macro/macro1.jpg" alt="View of the Antarctic Coast" /></span>
 										<h3>Life on Coral Reefs</h3>
 										<p>In vestibulum massa quis arcu lobortis tempus. Nam pretium arcu in odio vulputate luctus. Suspendisse euismod lorem eget lacinia fringilla. Sed sed felis justo. Nunc sodales elit in laoreet aliquam. Nam gravida, nisl sit amet iaculis porttitor, risus nisi rutrum metus.</p>
-										<span class="image fit"><img src="images/macro2.jpg" height="300" alt="" /></span>
+										<span class="image fit"><img src="images/macro/macro2.jpg" alt="A flounder" /></span>
 										<h3>Current Projects</h3>
 										<ul>
 											<li>Faucibus orci lobortis ac adipiscing integer.</li>
@@ -93,7 +95,7 @@
 										</section>
 										<hr />
 										<section>
-											<a href="#" class="image fit"><img src="images/macro4.jpg" alt="" /></a>
+											<a href="#" class="image fit"><img src="images/macro/macro4.jpg" alt="" /></a>
 											<h3>It's all about the timing</h3>
 											<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
 											<footer>
