added stacking to css and stacked team

--- a/team.html
+++ b/team.html
@@ -53,10 +53,11 @@
 
 						<!-- Content -->
 							<section id="content">
-								<section id = "katerina">
-								<span class="image left">
+								<div class="parent">
+								<div class="div1"> 
+								<a class="image left">
 		 								<img src="images/people/KatAlt.jpg"
-		 								alt="" /></span>
+		 								alt="" /></a>
 		 							<b>Katerina Zapfe</b><br>
 		 							<i> PhD Student</i><br>
 										I'm Kat, a SCUBA diver, NSF Graduate Research Fellow, and PhD student in the Dornburg lab interested in the evolution and conservation
@@ -65,11 +66,11 @@
 										inter-individual and macroevolutionary scales. Through phylogenomics, models and comparative methods, I ask how environmental changes
 										happening today can impact the fish diversity of tomorrow.
 										<a href='https://www.researchgate.net/profile/Katerina_Zapfe'> Researchgate </a>
-								</section>
-								<section id="rittika">
-									<span class="image left">
+								</div>
+								<div class="div2">
+									<a class="image left">
 										<img src="images/people/RittikaAlt.jpg"
-										alt="" /></span>
+										alt="" /></a>
 									<b>Rittika Malik</b><br>
 									<i> PhD Student</i><br>
 										I am a fourth-year Ph.D. student in the Bioinformatics department at UNC Charlotte.  I have completed my Masters from the same
@@ -81,37 +82,36 @@
 										I’d like to look more into the evolution of cancer in other animals for learning human cancers. I am also working on genome announcement
 										of Polypterus bichir and Long nosed gar. My skills involve developing pipelines for immunogenetics research by using a combination of
 										python, R, and bash. I am familiar with libraries such as BWA, openmpi, Busco, RepdeNovo and other bioinformatics pipelines. During my
-										free time, I love swimming, photography and travelling to new places.
-								</section>
-								<section>	
+										free time, I love swimming, photography and travelling to new places. 
+								</div>
+								<div class="div3"> 
 									<b>Haris Muharemovic</b><br>
 									<i> PhD Student</i><br>
-								</section>
-								<section>
-									<span class="image left">
+								</div>
+								<div class="div4">
+									<a class="image left">
 										<img src="images/people/CameronAlt.png"
-										alt="" /></span>
+										alt="" /></a>
 									<b>Cameron Nguyen</b><br>
 									<i> Masters Student</i><br>
 										I'm Cameron Nguyen, a masters student at UNC Charlotte pursuing a graduate degree in Bioinformatics. I obtained my bachelors degree
 										from NCSU and am now soon to graduate from UNCC. My interests have always included computers, so naturally I gravitated towards
 										the bioinformatics program at UNCC. Being of a biological science background, it felt like the perfect arrangement to combine
 										the two. My current research involves an investigation regarding the evolution of innate immune system genes.
-								</section>
-								<section>
-										
-										<span class="image left">
+								</div>
+								<div class="div5">
+										<a class="image left">
 										<img src="images/people/AlexandraAlt.png"
-										alt="" /></span>
+										alt="" /></a>
 									<b>Alexandra Tew</b><br>
 									<i> Masters Student</i><br>
 										I'm Alexandra, a graduate student in thr Department of Bioinformatics and Genomics at UNCC with a particular interest in studying
 										the impacts of endosymbiosis on the genome of marine organisms. I am currently working on the evolution of gene families in nototheniod fishes, with a focus on the relationship between changes in opsin gene tuning sites and habitat.
-								</section>
-								<section>
-										<span class="image left">
+								</div>
+								<div class="div6">
+										<a class="image left">
 										<img src="images/people/ManavAlt.png"
-										alt="" /></span>
+										alt="" /></a>
 									<b>Manav Rohilla</b><br>
 									<i> Undergraduate, Sophomore</i><br>
 										Hello! My name is Manav (it might take a couple tries to get it right)! I am a junior at UNC Charlotte and am studying Computer Science
@@ -120,37 +120,41 @@
 										biosphere we inhabit. The work I do in the Evolutionary Informatics Lab (conveniently shortened to EvIL) revolves mostly around the
 										acquisition, analysis, and reorganization of genetic data associated with viruses. Outside of EvIL, I enjoy aviation, playing guitar,
 										playing video games, and drinking what some may consider to be copious amounts of coffee!
-								</section>
-								<section>
-
-										<span class="image left">
+								</div>
+								<div class="div7"> 
+										<a class="image left">
 										<img src="images/people/EllaAlt.png"
-										alt="" /></span>
+										alt="" /></a>
 									<b>Ella Kellner</b><br>
 									<i>Undergraduate, Freshman</i><br>
-										I'm Ella, a freshman at UNC Charlotte. I am majoring in Biology and have a great interest in environmental and evolutionary sciences.
-										I aim to have a career in research and I am working to gain the research experience that I will need in the future. I am currently
-										focusing my efforts helping in the Dornburg laboratory.
-								</section>
-								<section>
-										<span class="image left">
+										I'm Ella, a freshman at UNC Charlotte. I am majoring in Biology and have a great interest in environmental and evolutionary sciences. I aim to have a career in research and I am working to gain the research experience that I will need in the future. I am currently focusing my efforts helping in the Dornburg laboratory.
+								</div>
+								<div class="div8"> 
+										<a class="image left">
 										<img src="images/people/AprilAlt.png"
-										alt="" /></span>
+										alt="" /></a>
 									<b>April Lamb</b><br>
 									<i>Research Technician</i><br>
-										I'm April, a Research Technician in the Dornburg Lab. Prior to this position, I received my Masters degree in Biology, Ecology and
-										Evolution and a professional certificate in Geospatial Information Systems (GIS) from North Carolina
-										State University. I am also a 2017 National Science Foundation Graduate Research Fellow and hold a Bachelor's degree in Zoology
-										from NC State. Broadly, I am interested in better understanding the bases of ecosystem resiliency (i.e. what factors contribute
-										to an ecosystem's ability to recover from perturbations) and applying this knowledge to inform science-based policy and management
-										decisions. I am especially interested in systems that are experiencing high levels of anthropogenically-driven change.
-								</section>
+										I'm April, a Research Technician in the Dornburg Lab. Prior to this position, I received my Masters degree in Biology, Ecology and Evolution and a professional certificate in Geospatial Information Systems (GIS) from North Carolina State University. I am also a 2017 National Science Foundation Graduate Research Fellow and hold a Bachelor's degree in Zoology from NC State. Broadly, I am interested in better understanding the bases of ecosystem resiliency (i.e. what factors contribute to an ecosystem's ability to recover from perturbations) and applying this knowledge to inform science-based policy and management decisions. I am especially interested in systems that are experiencing high levels of anthropogenically-driven change.
+								</div>
+								<div class="div9"> 
 
+										<a class="image left">
+										<img src=""
+										alt="" /></a>
+									<b>Derrek Pope</b><br>
+									<i>Undergraduate, Senior</i><br>
+								</div>
+								<div class="div10"> 
 
-
-
-
-							</section>
+										<a class="image left">
+										<img src=""
+										alt="" /></a>
+									<b></b><br>
+									<i></i><br>
+										
+								</div>
+							</div>	
 
 					</div>
 				</div>
