--- a/current.html
+++ b/current.html
@@ -48,7 +48,7 @@
 				<div id="main" class="wrapper style1">
 					<div class="container">
 						<header class="major">
-							<h2>Team</h2>
+							<h2>Current Lab Members</h2>
 						</header>
 
 						<!-- Content -->
