--- a/comp.html
+++ b/comp.html
@@ -29,7 +29,7 @@
 								<li><a href="immuno.html">Immunogenetics</a></li>
 							</ul>
 						</li>
-						<li><a href="current.html">Team</a>
+						<li><a href="teamOverview.html">Team</a>
 						<ul>
 							<li><a href="alex.html">Alex Dornburg</a></li>
 							<li><a href="current.html">Current Team Members</a></li>
