images and links

--- a/immuno.html
+++ b/immuno.html
@@ -29,7 +29,7 @@
 								<li><a href="immuno.html">Immunogenetics</a></li>
 							</ul>
 						</li>
-						<li><a href="current.html">Team</a>
+						<li><a href="teamOverview.html">Team</a>
 						<ul>
 							<li><a href="alex.html">Alex Dornburg</a></li>
 							<li><a href="current.html">Current Team Members</a></li>
@@ -56,13 +56,14 @@
 
 								<!-- Content -->
 									<section id="content">
-										<a href="#" class="image fit"><img src="images/IMG_2380.jpeg" alt="" /></a>
+										<a class="image fit"><img src="images/immune/Florida_banner.jpg" alt="" /></a>
 										<h3>Clustered Gene Families</h3>
 										<p>A pervasive feature of the vertebrate immune system is the successive duplication of tandem genes. These duplication events have led to the existence of clustered gene families of immune receptors that display disproportionately high levels of genetic variation relative to surrounding regions. The existence of multiple, highly diverse immune receptor genes provides clear benefits against the threat of infectious diseases. However, these clusters often have different numbers of genes, and/or families of genes that are unidentifiable or nonfunctional between evolutionarily divergent model species.</p> 
 
 										<h3>Fish as models</h3>
 										<p>We share 70 percent of our genes with fish and several fish species are already used as model systems, including zebrafish, sticklebacks, and medaka. Advances in functional genomics now allow us to test how clustered genes contribute to everything from behavior to disease. However, translating work in fishes to humans is challenged by the fact that all of these model species contain a duplicated genome. </p>
 										<p>This genome duplication is a major problem that makes relating genetic mechanisms between humans and fish especially difficult. So how do we bridge the genetic gap between model fish and humans? Fortunately, two species of fish that reside in the waters of North America are turning out to be the missing rosetta stone we need to translate work between model fishes to humans – gar and bowfin.</p>
+										<a class="image fit"><img src="images/immune/Capefear6.jpg" alt="A small gar underwater" /></a>
 										<h3>Darwin's Living Fossils</h3>
 										<p>Referred to by Darwin as living fossils, both gar and bowfin are ancient fish lineages that do not possess a duplicated genome. Instead they contain a mix of genes that sometimes more closely resemble those in humans or chicken rather than fish! <p>Working closely with <a href='http://www4.ncsu.edu/~jayoder/'> Jeff Yoder </a> at the NC State Veterinary School a major aspect of our comparative immunogenetic work is empowered by investigating genes relevant to human immune function also shared by these species. Our goal is to understand the functional consequences of gene duplications in these clusters, and ultimately develop an understanding of how this genetic diversity contributes to organismal health and disease</p>
 										<h3>Current Research Initiatives</h3>
@@ -85,7 +86,7 @@
 											<h3>Insights from Bowfin</h3>
 											<p>Our recent work on the bowfin genome led to a reclassification of antibodies for half of all living vertebrates, revealed a striking similarity of the MHC locus between these fishes and humans, and demonstrated the presence of numerous receptors thought to have evolved over a hundred million years later. We are now continuing similar work in other 'living fossil' fishes! </p>
 											<footer>
-												<a href="https://www.nature.com/articles/s41588-021-00914-y" class="image fit"><img src="images/Capefear7.jpg" alt="" /></a>
+												<a href="https://www.nature.com/articles/s41588-021-00914-y" class="image fit"><img src="images/immune/Capefear7.jpg" alt="A bowfin held out of water" /></a>
 												<ul class="actions">
 													<li><a href="https://www.nature.com/articles/s41588-021-00914-y" class="button">Read the paper</a></li>
 												</ul>
@@ -97,10 +98,13 @@
 											<h3>The Origins of Adaptive Immunity</h3>
 											<p> Vertebrate adaptive immunity relies on an extensive and highly diverse repertoire of tandem arrays of variable (V), diversity (D), and joining (J) gene segments that recombine to produce different immunoglobulin (Ig) and T cell receptor (TCR) genes. However, a model for the evolutionary relationships between extant non-recombining innate immune receptors and the V(D)J receptors of the jawed vertebrate adaptive immune system has only recently begun to come into focus. </p><p>We are working on several exciting projects that provide this evolutionary context and also recently published a review on this topic that we hope will serve as a catalyst for more comparative research on this topic</p>
 											<footer>
-												<a href="https://link.springer.com/content/pdf/10.1007/s00251-021-01232-7.pdf" class="image fit"><img src="images/NITRvsNK.png" alt="" /></a>
+												
 												<ul class="actions">
+
 													<li><a href="https://link.springer.com/content/pdf/10.1007/s00251-021-01232-7.pdf" class="button">Read the paper</a></li>
 												</ul>
+												<a href="https://link.springer.com/content/pdf/10.1007/s00251-021-01232-7.pdf" class="image fit"><img src="images/immune/gecko.jpg" alt="" /></a>
+													<a href="https://link.springer.com/content/pdf/10.1007/s00251-021-01232-7.pdf" class="image fit"><img src="images/immune/NITRvsNK.png" alt="" /></a>
 											</footer>
 										</section>
 									</section>
