added more pubs

--- a/publications.html
+++ b/publications.html
@@ -216,7 +216,15 @@
 											<li>Reynolds,R.G., Niemiller, M.L., Hedges, S.B., Dornburg, A., Revell, L.J. Molecular phylogeny and historical biogeography of West Indian boid snakes (Chilabothrus). <i>Molecular Phylogenetics and Evolution</i> 68: 461—470 <b><a href="#"> PDF</a></b></li>
 											<li>Santini, F., Sorenson, L., Marcroft, T. Dornburg, A., Alfaro, M.E. A multilocus phylogeny of boxfishes (Aracanidae, Ostraciidae; Tetraodonti- formes).<i> Molecular Phylogenetics and Evolution</i> 66: 153—160 <b><a href="#"> PDF</a></b></li>
 										</ul>
+										<span class="image fit"><img src="images/publicationsBanner13.jpg" height="300" alt="" /></span>
 										<h4>2012</h4>
+										<ul>
+										<li>Near,T.J., Eytan, R.I., Dornburg, A., Kuhn, K.L, Moore, J.A., Wainwright, P., Friedman, M., Davis, M., Smith, L. Resolution of ray-finned fish phylogeny and timing of diversification. Proceedings of the National Academy Sciences 109: 13698–13703 <b><a href="#"> PDF</a></b></li>
+										<li>Dornburg, A., Moore, J.A., Webster, R., Warren, D.L., Brandley, M.C., Iglesias, T.L., Wainwright, P.C., and T.J. Near. Molecular phylogenetics of squirrelfishes and soldierfishes (Teleostei:Beryciformes: Holocentridae): reconciling more than 100 years of taxonomic confusion. Molecular Phylogenetics and Evolution 65: 727–738 <b><a href="#"> PDF</a></b></li>
+										<li>Near,T.J., Dornburg, A., Kuhn, K.L., Eastman, J.T., Pennington, J.N., Patarnello, T., Zane, L., Fernandez, D.A., Jones, C.D. Ancient climate change, antifreeze, and the evolutionary diversification of Antarctic fishes. Proceedings of the National Academy Sciences 109:3434–3439 <b><a href="#"> PDF</a></b></li>
+										</ul>
+
+										<h3>2011</h3>
 										<p>Under Construction</p>
 
 
