--- a/publications.html
+++ b/publications.html
@@ -214,7 +214,7 @@
 											<li>Near, T.J., Dornburg, A., Tokita, M., Suzuki, D., Brandley, M.C., Friedman, M. Boom and bust: ancient and recent diversification in bichirs and ropefish (Polypteridae: Actinopterygii), a relictual lineage of ray-finned fishes. <i>Evolution</i> 68: 1014—1026 <b><a href="#"> PDF</a></b></li>
 											<li>Friedman, M., Keck, B.P., Dornburg, A., Eytan, R.I., Martin, C.H., Hulsey, C.D., Wainwright P.C., T.J. Near. Molecular and fossil evidence place the origin of cichlid fishes long after Gondwanan rifting. <i>Proceedings of the Royal Society B</i> 280:20131733 <b><a href="#"> PDF</a></b></li>
 											<li>Reynolds,R.G., Niemiller, M.L., Hedges, S.B., Dornburg, A., Revell, L.J. Molecular phylogeny and historical biogeography of West Indian boid snakes (Chilabothrus). <i>Molecular Phylogenetics and Evolution</i> 68: 461—470 <b><a href="#"> PDF</a></b></li>
-											<li>Santini, F., Sorenson, L., Marcroft, T. Dornburg, A., Alfaro, M.E. A multilocus phylogeny of boxfishes (Aracanidae, Ostraciidae; Tetraodonti- formes).<i> Molecular Phylogenetics and Evolution</i> 66: 153—160 <b><a href="#"> PDF</a></b></li>
+											<li>Santini, F., Sorenson, L., Marcroft, T. Dornburg, A., Alfaro, M.E. A multilocus phylogeny of boxfishes (Aracanidae, Ostraciidae; Tetraodontiformes).<i> Molecular Phylogenetics and Evolution</i> 66: 153—160 <b><a href="#"> PDF</a></b></li>
 										</ul>
 										<span class="image fit"><img src="images/publicationsBanner13.jpg" height="300" alt="" /></span>
 										<h4>2012</h4>
