--- a/publications.html
+++ b/publications.html
@@ -77,16 +77,16 @@
 								<h3><b>Publications</b></h3>
 									<h4>2022</h4>
 										<ul><span class="custom_bold">
-											<li> Fisk, J N, Mahal, A R, Dornburg, A, Gaffney, S G, Aneja, S, Contessa, J N, Rimm, D, Yu, J B,
-												& Townsend, J P. Premetastatic shifts of endogenous and exogenous mutational processes support consolidative
+											<li> Fisk JN, Mahal AR, Dornburg A, Gaffney SG, Aneja S, Contessa JN, Rimm D, Yu JB,
+												& Townsend JP. Premetastatic shifts of endogenous and exogenous mutational processes support consolidative
 												therapy in EGFR-driven lung adenocarcinoma. <i>Cancer Letters</i>, 526, 346–351.
 												<b><a href="/pubs/Fisk2022.pdf">PDF</a></b></li>
 
-											<li>Dornburg, A, & Yoder, J A. On the relationship between extant innate immune receptors and the evolutionary
+											<li>Dornburg A, & Yoder JA. On the relationship between extant innate immune receptors and the evolutionary
 												origins of jawed vertebrate adaptive immunity. <i>Immunogenetics</i>, 74(1), 111–128.
 												<b><a href="/pubs/Dornburg2022.pdf">PDF</a></b></li>
 
-											<li>Parker, E, Dornburg, A, Struthers, C D, Jones, C D, & Near, T J. Phylogenomic species delimitation
+											<li>Parker E, Dornburg A, Struthers CD, Jones CD, & Near TJ. Phylogenomic species delimitation
 												dramatically reduces species diversity in an Antarctic adaptive radiation. <i>Systematic Biology</i>.
 												<b><a href="/pubs/Parker2022.pdf">PDF</a></b></li>
 										</ul></span>
@@ -95,17 +95,17 @@
 									<h4>2021</h4>
 										<ul>
 											<span class="custom_bold">
-											<li>Townsend, J P, Hassler, H B, Wang, Z, Miura, S, Singh, J, Kumar, S, Ruddle, N H, Galvani, A P, & Dornburg,
+											<li>Townsend JP, Hassler HB, Wang Z, Miura S, Singh J, Kumar S, Ruddle NH, Galvani AP & Dornburg
 												A. The durability of immunity against reinfection by SARS-CoV-2: a comparative evolutionary study. <i>The Lancet Microbe</i>, 
 												2(12), e666–e675.
 												<b><a href="https://www.thelancet.com/journals/lanmic/article/PIIS2666-5247(21)00219-6/fulltext">PDF</a></b></li>
 
-											<li> Thompson, AW, Hawkins, MB, Parey, E et al .The bowfin genome illuminates the developmental evolution of ray-finned
+											<li> Thompson AW, Hawkins MB, Parey E et al .The bowfin genome illuminates the developmental evolution of ray-finned
 												fishes. <i>Nature Genetics</i> 53, 1373–1384.
 												<b><a href="https://www.nature.com/articles/s41588-021-00914-y">PDF</a></b></li>
 
-											<li> Lamb, A D, Lippi, C A, Watkins-Colwell, G J, Jones, A, Warren, D L, Iglesias, T L, Brandley, M C, &
-												Dornburg, A. Comparing the dietary niche overlap and ecomorphological differences between invasive Hemidactylus
+											<li> Lamb AD, Lippi CA, Watkins-Colwell GJ, Jones A, Warren DL, Iglesias TL, Brandley MC, &
+												Dornburg A. Comparing the dietary niche overlap and ecomorphological differences between invasive Hemidactylus
 												mabouia geckos and a native gecko competitor. <i>Ecology and Evolution</i>, 11(24), 18719–18732.
 												<b><a href="https://onlinelibrary.wiley.com/doi/pdf/10.1002/ece3.8401">PDF</a></b></li>
 
