--- a/alex.html
+++ b/alex.html
@@ -52,8 +52,7 @@
 						</header>
 
 						<!-- Content -->
-							<section id="content">
-								<h3>Alex Dornburg</h3>
+							<section id="content">=
 								<i> Principal Investigator</i>
 								<p><span class="image right">
 									<img src="images/people/AlexAlt.jpg" alt="" /></span>
