--- a/publications.html
+++ b/publications.html
@@ -221,16 +221,20 @@
 										<span class="image fit"><img src="images/publicationsBanner13.jpg" height="300" alt="" /></span>
 										<h4>2012</h4>
 										<ul>
-										<li>Near,T.J., Eytan, R.I., Dornburg, A., Kuhn, K.L, Moore, J.A., Wainwright, P., Friedman, M., Davis, M., Smith, L. Resolution of ray-finned fish phylogeny and timing of diversification. Proceedings of the National Academy Sciences 109: 13698–13703 <b><a href="#"> PDF</a></b></li>
-										<li>Dornburg, A., Moore, J.A., Webster, R., Warren, D.L., Brandley, M.C., Iglesias, T.L., Wainwright, P.C., and T.J. Near. Molecular phylogenetics of squirrelfishes and soldierfishes (Teleostei:Beryciformes: Holocentridae): reconciling more than 100 years of taxonomic confusion. Molecular Phylogenetics and Evolution 65: 727–738 <b><a href="#"> PDF</a></b></li>
-										<li>Near,T.J., Dornburg, A., Kuhn, K.L., Eastman, J.T., Pennington, J.N., Patarnello, T., Zane, L., Fernandez, D.A., Jones, C.D. Ancient climate change, antifreeze, and the evolutionary diversification of Antarctic fishes. Proceedings of the National Academy Sciences 109:3434–3439 <b><a href="#"> PDF</a></b></li>
+											<li>Near,T.J., Eytan, R.I., Dornburg, A., Kuhn, K.L, Moore, J.A., Wainwright, P., Friedman, M., Davis, M., Smith, L. Resolution of ray-finned fish phylogeny and timing of diversification. Proceedings of the National Academy Sciences 109: 13698–13703 <b><a href="#"> PDF</a></b></li>
+											<li>Dornburg, A., Moore, J.A., Webster, R., Warren, D.L., Brandley, M.C., Iglesias, T.L., Wainwright, P.C., and T.J. Near. Molecular phylogenetics of squirrelfishes and soldierfishes (Teleostei:Beryciformes: Holocentridae): reconciling more than 100 years of taxonomic confusion. Molecular Phylogenetics and Evolution 65: 727–738 <b><a href="#"> PDF</a></b></li>
+											<li>Near,T.J., Dornburg, A., Kuhn, K.L., Eastman, J.T., Pennington, J.N., Patarnello, T., Zane, L., Fernandez, D.A., Jones, C.D. Ancient climate change, antifreeze, and the evolutionary diversification of Antarctic fishes. Proceedings of the National Academy Sciences 109:3434–3439 <b><a href="#"> PDF</a></b></li>
 										</ul>
 										<span class="image fit"><img src="images/marsh.jpg" height="300" alt="" /></span>
 										<h3>2011</h3>
+										<ul>
+											<li>Dornburg A., Brandley M.C., McGowen M., Near T.J. Rate Heterogeneity, Uncorrelated Relaxed-Clock Models, and Patterns of Molecular Evolution in Cetaceans. Molecular Biology and Evolution 29: 721-736.<b><a href="#"> PDF</a></b></li>
+											<li>Dornburg A., Colosi J.G., Maser C., Reese A.T., Watkins-Colwell G.J. A survey of the Yale Peabody Museum collection of Egyptian mammals collected during the construction of the Aswan high dam: with an emphasis on material from the Yale University prehistoric expedition to Nubia (YUPEN) 1962-1965. Peabody Bulletin of Natural History 52:255-272.<b><a href="#"> PDF</a></b></li>
+											<li>Dornburg A., Sidlauskas B., Sorenson L., Santini F., Near T.J., Alfaro, M.E. The influence of an innovative locomotor strategy on the phenotypic diversification of triggerfishes (Family: Balistidae). Evolution 65:1912–1926.<b><a href="#"> PDF</a></b></li>
+											<li>Dornburg A., Warren D.L., Iglesias T.L., Brandley M.C. Natural history observations of the ichthyological and herpetological fauna on the Island of Curaçao, Netherlands Antilles. Peabody Bulletin of Natural History 52:181–186.<b><a href="#"> PDF</a></b></li>
+											<li>Dornburg A., Beaulieu J.M., Oliver J.C., Near T.J. Integrating fossil preservation biases in the selection of calibrations for molecular divergence time estimation. Systematic Biology 60: 519-527. pdf
+										</ul>
 										<p>Under Construction</p>
-
-
-
 
 
 
