--- a/software.html
+++ b/software.html
@@ -47,41 +47,48 @@
 			<!-- Main -->
 				<div id="main" class="wrapper style1">
 					<div class="container">
-						<header class="major">
+						<header class="custom">
 							<h2>Software</h2>
-							<p>As scientists we constantly need to modify or develop software in order to better analyze our data.
-								As our team develops new tools or tweaks existing programs to do useful things, we will be updating
-								this section to contribute to the growing body of bioinformatic software.</p>
+						
 						</header>
-
+								<span class="custom_bold"><p>As scientists we constantly need to modify or develop software in order to better analyze our data.
+								As our team develops new tools or tweaks existing programs to do useful things, we will be updating
+								this section to contribute to the growing body of bioinformatic software.</p></span>
+								<hr />
 						<!-- Content -->
 							<section id="content">
+								<div class="div1"> 
 								<h3>phyinformR: Phylogenetic experimental design and data exploration in R</h3>
 								<p><a href="phyinformrMain.html" class="image left"><img src="images/PhyinformRCover.png" alt="" ></a> PhyInformR is an open source software package that facilitates rapid calculation of phylogenetic informativeness and several novel related assessments of the phylogenetic utility of any given dataset or dataset partition. </p><p>By facilitating computation on user hardware, PhyInformR increases the potential power users can apply toward screening datasets for phylogenetic information content by orders of magnitude. </p><p>PhyInformR also features expanded functionality compared to current resources, providing new tools for data visualization and routines optimized for rapid statistical calculations using parallel processing.</p>
 								<div class="col-6 col-12-xsmall">
 										<ul class="actions fit small">
-											<li><a href="#" class="button primary fit small">PhyinformR Walkthrough</a></li>
+											<li><a href="#" class="button custom fit ">PhyinformR Walkthrough</a></li>
 										</ul>
 									</div>
 								<p></p>
-								<br></br>
+								</div> 
+								<hr />
+								<div class="div2"> 
 								<h3>TOAST: Transcriptome Ortholog Alignment Tools </h3>
 								<p><span class="image left"><img src="images/TOAST_Manual_cover.png" alt="" /></span> TOAST is an open source R package designed to help you effectively harness public data, visualize missing data patterns, and assemble multiple sequence alignments.TOAST can be downloaded here and requires R. </p><p>TOAST is continually updated to include utility functions that make data parsing easier and circumvent the use of multiple software steps in informatic pipelines. TOAST can generate output that can be fed directly into IQTREE and has numerous functions for analyzing missing data and subsetting massive sequence datasets</p>
 								<div class="col-6 col-12-xsmall">
 										<ul class="actions fit small">
-											<li><a href="#" class="button primary fit small">TOAST Walkthrough</a></li>
+											<li><a href="#" class="button custom fit ">TOAST Walkthrough</a></li>
 										</ul>
 									</div>
-								<br></br>
+								</div>
+								<hr />
+								<div class="div3"> 
 								<h3>Additional Scripts </h3>
 								<p><span class="image left"><img src="images/toadfish3.png" alt="" /></span> Here we provide an overview of custom scripts that were created in the course of our projects  with detailed tutorials and additional content</p><p>This archive will be updated as new work is published and provide links to the corresponding data files allowing you to replicate our results while learning new techniques </p>
 								<p> Please check back periodically for new updates!</p>
 								<div class="col-6 col-12-xsmall">
 										<ul class="actions fit small">
-											<li><a href="#" class="button primary fit small">See Archive</a></li>
+											<li><a href="#" class="button custom fit ">See Archive</a></li>
 										</ul>
 									</div>
-								<p></p>
+								</div>
+								<hr />
 								<br></br>
 
 
