added missing lnk

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 							<p> Reconstructing the Tree of Life gives us an evolutionary roadmap of the pathways various organisms took to the present day. This perspective is essential for topics that span a lineage's response to climate change to metastatic cascades in cancer. However, estimating phylogenies is far from trivial </p>
 							<p> Genome scale datasets provide a wealth of information, but also a lot of noise. Picture hiding a giant needle with an answer in a massive haystack. In our group we develop tools and theory to find that needle of information. This allows us to harness the power of massive sequence datasets and estimate robust phylogenies<p>
 							<ul class="actions">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a href="phylo.html" class="button">Learn More</a></li>
 							</ul>
 						</div>
 						<a href="#six" class="goto-next scrolly">Next</a>
